Bug 387228 - swap file appears in wrong path
Summary: swap file appears in wrong path
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.3.1
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 388397 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-11-22 22:31 UTC by Jo
Modified: 2018-02-06 10:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jo 2017-11-22 22:31:19 UTC
Since the latest public release, kirta creates a "KRITA_SWAP_FILE_xz7210" in my home folder. I guess a better place would be:

(path to temporary items folder from user domain)
…or similar.
Comment 1 Jo 2017-12-31 17:28:58 UTC
*** Bug 388397 has been marked as a duplicate of this bug. ***
Comment 2 Jo 2017-12-31 17:30:55 UTC
Oops. I wanted to mark the other report as valid and this one as duplicate. 

Recently, Krita adds swap files to the home directory-in not happy with this bug as data like that belongs in catch / temporary items folder. It's not just clutter but simply not the right place to swap data.
Comment 3 Jo 2018-01-03 13:01:32 UTC
Yesterday I realised there is an option to set the desired path for swap files. (???) 
I mean OK thanks... But why should we need such an option? 
Cache files should be an internal, not configurable tasks which are stored / loaded/unloaded/deleted without user interaction.
Comment 4 Halla Rempt 2018-01-03 14:01:47 UTC
Because people have asked for it to be configurable, for instance to place the swap files on a second disk, or on a faster ssd.
Comment 5 Jo 2018-01-26 09:28:06 UTC
Please fix the default wrap file path at least for Mac os. Swap Files like that belong in:
Home/library/application support/Krita/swap/
I know windows Os uses a similar approach:storing "application support" folders in home/documents/
Which is cluttering up areas which are reserved for personal use. Home path is reserved, not an alternative path to store files for applications. 
I'm talking about the default location part and not about the ability to store swap files somewhere else
Comment 6 Jo 2018-01-26 10:03:59 UTC
I forgot to add... This small but report comes up all times as Krita forgets the custom path I set. Anyway. Please use
Home/library/application support/Krita/swap/
I hope this report can be closed soon as there are more important problems to solve
Comment 7 Halla Rempt 2018-02-06 10:01:01 UTC
Git commit 14ff8d14296b05ccf0f1b98d6d2eb106a6f5a571 by Boudewijn Rempt.
Committed on 06/02/2018 at 09:56.
Pushed by rempt into branch 'master'.

Use AppLocalDataLocation for the swap file on OSX

Otherwise the home directory gets cluttered with swap files

M  +1    -1    libs/image/kis_image_config.cpp

https://commits.kde.org/krita/14ff8d14296b05ccf0f1b98d6d2eb106a6f5a571