Use AppLocalDataLocation for the swap file on OSX

Otherwise the home directory gets cluttered with swap files

BUG:387228